# ping-core

./: brave_paks.gni  output.txt  package-lock.json  package.json
android/: brave_java_resources.gni
app/: access_code_cast_strings.grdp  app_management_strings.grdp  brave_generated_resources.grd  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  certificate_manager.grdp  extensions_strings.grdp  extensions_strings_override.grdp  file_manager_strings.grdp  generated_resources.grd  generated_resources_override.grd  gmc_strings.grdp  media_router_strings.grdp  nearby_share_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  password_manager_ui_strings.grdp  printing_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  support_tool_strings.grdp
app/resources/: brave_generated_resources_am.xtb  brave_generated_resources_ar.xtb  brave_generated_resources_bg.xtb  brave_generated_resources_bn.xtb  brave_generated_resources_ca.xtb  brave_generated_resources_cs.xtb  brave_generated_resources_da.xtb  brave_generated_resources_de.xtb  brave_generated_resources_el.xtb  brave_generated_resources_en-GB.xtb  brave_generated_resources_es-419.xtb  brave_generated_resources_es.xtb  brave_generated_resources_et.xtb  brave_generated_resources_fa.xtb  brave_generated_resources_fi.xtb  brave_generated_resources_fil.xtb  (+200 more)
browser/: brave_browser_main_parts.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_profile_prefs.h  sources.gni
components/: autofill_payments_strings.grdp  autofill_prediction_improvements_strings.grdp  autofill_strings.grdp  browsing_data_strings.grdp  commerce_strings.grdp  components_brave_strings.grd  components_strings.grd  compose_strings.grdp  error_page_strings.grdp  facilitated_payments_strings.grdp  history_strings.grdp  management_strings.grdp  management_strings_override.grdp  new_or_sad_tab_strings.grdp  new_or_sad_tab_strings_override.grdp  omnibox_pedal_ui_strings.grdp  omnibox_strings.grdp  page_info_strings.grdp  password_manager_strings.grdp  payments_strings.grdp  permissions_strings.grdp  policy_strings.grdp  privacy_sandbox_chrome_strings.grdp  privacy_sandbox_strings.grdp  search_engine_choice_strings.grdp  security_interstitials_strings.grdp  security_interstitials_strings_override.grdp  send_tab_to_self_strings.grdp  site_settings_strings.grdp  ssl_errors_strings.grdp  supervised_user_strings.grdp  sync_ui_strings.grdp  translate_strings.grdp
components/brave_custom_notes/common/: BUILD.gn  brave_custom_notes.mojom  constants.h
components/brave_custom_notes/resources/page/: BUILD.gn  brave_custom_notes.html  brave_custom_notes.tsx  container.tsx  custom_notes.html  custom_notes.tsx  tsconfig.json
components/brave_custom_notes/resources/page/api/: brave_custom_notes_handler.ts
components/ping_ai_copilot/: BUILD.gn  resources.grd
components/ping_ai_copilot/extension/: BUILD.gn  README.md  manifest.json
components/ping_ai_copilot/extension/constants/: constants.js
components/ping_ai_copilot/extension/content/content_scripts/: aiSummarizer.js  content.js  rephraser.js
components/ping_ai_copilot/extension/content/ui/: style.css
components/ping_ai_copilot/extension/service_worker/: background.js
patches/: ssl_client_socket_impl.cc.patch
resources/: resource_ids.spec
script/: generate_licenses.py  signing_helper.py
(+1057 files in other folders)
