# Copyright (c) 2018 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/common/typescript.gni")
import("//brave/resources/brave_grit.gni")
import("//tools/grit/repack.gni")

brave_grit("static_resources") {
  source = "resources.grd"
  outputs = [
    "grit/ping_ai_copilot_resources_map.cc",
    "grit/ping_ai_copilot_resources_map.h",
    "grit/ping_ai_copilot_resources.h",
    "ping_ai_copilot_static.pak",
  ]
}

pack_web_resources("generated_resources") {
  resource_name = "ping_ai_copilot"
  output_dir = "$root_gen_dir/brave/components/ping_ai_copilot"

  # Need wepack and GRD generation first
  deps = [ "extension:generate_ping_ai_copilot" ]
}

repack("resources") {
  deps = [
    ":generated_resources",
    ":static_resources",
  ]
  sources = [
    "$root_gen_dir/brave/components/ping_ai_copilot/ping_ai_copilot_generated.pak",
    "$root_gen_dir/brave/components/ping_ai_copilot/ping_ai_copilot_static.pak",
  ]

  # This output repacked by brave_paks.gni
  output = "$root_gen_dir/brave/components/ping_ai_copilot/ping_ai_copilot_resources.pak"
}
