import("//mojo/public/tools/bindings/mojom.gni")

static_library("common") {
  sources = [
    "constants.h",
  ]

  deps = [
    "//base",
    "//brave/components/resources:strings",
    "//ui/base",
  ]
}

mojom("mojom") {
  sources = [ "brave_custom_notes.mojom" ]
  public_deps = [ "//mojo/public/mojom/base" ]
}
